# hf-pi-sync

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/plans/: sync-memory-md.md
src/hf_pi_sync/: __init__.py  buckets.py  cli.py  lastsync.py  staging.py  sync.py
tests/: conftest.py  test_auto.py  test_init.py  test_marker.py  test_pi_install.py  test_pull.py  test_push.py  test_scaffold.py  test_status.py
